--- a/index.html
+++ b/index.html
@@ -97,130 +97,79 @@
                 <span style="font-size:12px">(click to enlarge)</span>
                 <div class="fakeimg">At the very begining</div>
                 <p>Somerset, NJ, United States</p>
-                <p>Producer, Musician, Songwriter, Beat Maker, and Recording Engineer</p>
-                <!--<h3 class="mt-4">Music References</h3>-->
-                <!--<p>DAW Software, Musical Instruments and Tutorials</p>
-    <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-            <a class="nav-link" href="https://www.ableton.com/" target="_blank">Ableton Live</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="https://www.avid.com/pro-tools" target="_blank">Avid Technology</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="https://www.reasonstudios.com/" target="_blank">Reason Studios</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-               href="https://www.masterclass.com/articles/home-recording-studio-101-how-to-record-instruments" target="_blank">Master Class</a>
-        </li>
-    </ul>-->
-                <!--<hr class="d-sm-none">-->
+
+                <!-- Song listing -->
                 <h3 class="mt-4">Songs</h3>
-                <span><b>G-Ride (feat. Christina R.)</b></span>
-                <a href="lyrics/G-Ride.pdf" target="_blank">Lyrics</a>
+
+                <p><b>G-Ride (feat. Christina R.)</b>
+                    <a href="lyrics/G-Ride.pdf" target="_blank">Lyrics</a>
+                </p>
                 <audio controls preload="none">
                     <source src="music/G Ride2.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>My Fantasy Boy (feat. Janira R.)</b></span>
-                <a href="lyrics/My Fantasy Boy.pdf" target="_blank">Lyrics</a>
+
+                <p><b>My Fantasy Boy (feat. Janira R.)</b>
+                    <a href="lyrics/My Fantasy Boy.pdf" target="_blank">Lyrics</a>
+                </p>
                 <audio controls preload="none">
                     <source src="music/Janira3.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>Wasting My Time (feat. Allen)</b></span>
-                <a href="lyrics/Wasting My Time.pdf" target="_blank">Lyrics</a>
+
+                <p><b>Wasting My Time (feat. Allen)</b>
+                    <a href="lyrics/Wasting My Time.pdf" target="_blank">Lyrics</a>
+                </p>
                 <audio controls preload="none">
                     <source src="music/Wasting My Time1.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span>
-                    <b>Soon (feat. Texas)</b>
+
+                <p><b>Soon (feat. Texas)</b>
                     <a href="lyrics/Soon.pdf" target="_blank">Lyrics</a>
-                </span>
+                </p>
                 <audio controls preload="none">
                     <source src="music/Soon.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>Oh Well (short)</b></span>
+
+                <p><b>Oh Well (short)</b></p>
                 <audio controls preload="none">
                     <source src="music/Oh Well2.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>What I'm Lookin' For (feat. Young Amazin)</b></span>
+
+                <p><b>What I'm Lookin' For (feat. Young Amazin)</b></p>
                 <audio controls preload="none">
                     <source src="music/What Im Looking For.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>No More' For (feat. Young Amazin)</b></span>
+
+                <p><b>No More' For (feat. Young Amazin)</b></p>
                 <audio controls preload="none">
                     <source src="music/No More Dutch.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>Can't Breath (feat. Gabrielle, Trinity L.)</b></span>
+
+                <p><b>Can't Breath (feat. Gabrielle, Trinity L.)</b></p>
                 <audio controls preload="none">
                     <source src="music/Gabrielle.wav" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>Shocking</b></span>
+
+                <p><b>Shocking</b></p>
                 <audio controls preload="none">
                     <source src="music/Shocking.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
-                <span><b>Just F*ckin Around</b></span>
+
+                <p><b>Just F*ckin Around</b></p>
                 <audio controls preload="none">
                     <source src="music/You So Fine.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
-                <br />
 
-                <!--<ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-            <a class="nav-link"
-               href="https://soundcloud.com/tlennon/oh-well2/s-CxaM1?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">Oh Well</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-               href="https://soundcloud.com/tlennon/g-ride2/s-aZzVr?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                G-Ride (Feat. Christina R.)
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-               href="https://soundcloud.com/tlennon/my-fantasy-boy/s-BIekf?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                My Fantasy Boy (Feat. Janira R.)
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-               href="https://soundcloud.com/tlennon/what-im-looking-for/s-31f78?in=tlennon/sets/young-amazin/s-Dc6R3&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                What I'm Looking For (Feat. Young Amazin)
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-               href="https://soundcloud.com/tlennon/no-more-dutch/s-cBGw6?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                No More Dutch (Feat. Young Amazin)
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link"
-               href="https://soundcloud.com/tlennon/you-so-fine/s-TmtCi?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
-                Me Just F*#king Around
-            </a>
-        </li>
-    </ul>-->
-                <!--<hr class="d-sm-none">-->
+<!-- Video Tutorials -->
                 <h3 class="mt-4">Video Tutorials</h3>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
@@ -248,9 +197,5 @@
         </div>
     </div>
     <footer-component></footer-component>
-    <!--<div class="mt-5 p-4 bg-dark text-white text-center">-->
-    <!--<p>Footer</p>-->
-    <!--</div>-->
-
 </body>
 </html>
