--- a/equipment.html
+++ b/equipment.html
@@ -175,6 +175,16 @@
                 <img id="myImg11" src="images/equipment/crate bass speaker.jpg"
                      alt="Crate Bass Speaker">
             </div>
+            <div class="col-sm-2">
+                <p style="text-align:center">Behringer Mini Amp for Headphones</p>
+                <img id="myImg12" src="images/equipment/behringer mini amp.jpg"
+                     alt="Behringer Mini Amp">
+            </div>
+            <div class="col-sm-2">
+                <p style="text-align:center">Yahmaha MW10 Mixer</p>
+                <img id="myImg13" src="images/equipment/yamaha mw10.jpg"
+                     alt="Yahmaha MW10 Mixer">
+            </div>
         </div>
 
 
@@ -510,13 +520,76 @@
             }
 
             // Get the <span> element that closes the modal
-            var span = document.getElementsByClassName("close")[10  ];
+            var span = document.getElementsByClassName("close")[10];
 
             // When the user clicks on <span> (x), close the modal
             span.onclick = function () {
                 modal.style.display = "none";
             }
         </script>
+
+
+        <!-- The Modal Behringer Mini Amp -->
+        <div id="myModal12" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img012">
+            <div id="caption12">"Behringer Mini Amp"</div>
+        </div>
+
+        <script>
+            // Get the modal
+            var modal = document.getElementById("myModal12");
+
+            // Get the image and insert it inside the modal - use its "alt" text as a caption
+            var img = document.getElementById("myImg12");
+            var modalImg = document.getElementById("img012");
+            var captionText = document.getElementById("caption12");
+            img.onclick = function () {
+                modal.style.display = "block";
+                modalImg.src = this.src;
+                captionText.innerHTML = this.alt;
+            }
+
+            // Get the <span> element that closes the modal
+            var span = document.getElementsByClassName("close")[11];
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function () {
+                modal.style.display = "none";
+            }
+        </script>
+
+        <!-- The Modal Yamaha MW10 Mixer -->
+        <div id="myModal13" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img013">
+            <div id="caption13">"Yamaha MW10 Mixer"</div>
+        </div>
+
+        <script>
+            // Get the modal
+            var modal = document.getElementById("myModal13");
+
+            // Get the image and insert it inside the modal - use its "alt" text as a caption
+            var img = document.getElementById("myImg13");
+            var modalImg = document.getElementById("img013");
+            var captionText = document.getElementById("caption13");
+            img.onclick = function () {
+                modal.style.display = "block";
+                modalImg.src = this.src;
+                captionText.innerHTML = this.alt;
+            }
+
+            // Get the <span> element that closes the modal
+            var span = document.getElementsByClassName("close")[12];
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function () {
+                modal.style.display = "none";
+            }
+        </script>
+
     </div>
+
 </body>
-</html>﻿
+</html >
