added to more studio pics

--- a/equipment.html
+++ b/equipment.html
@@ -127,7 +127,7 @@
                 <img id="myImg1" src="images/equipment/Sanson 50a.jpg">
             </div>
             <div class="col-sm-2">
-                <p style="text-align:center">Motif ES8</p>
+                <p style="text-align:center">Yamaha Motif ES8</p>
                 <img id="myImg2" src="images/equipment/Motif ES8.jpg">
             </div>
             <div class="col-sm-2">
@@ -181,9 +181,9 @@
                      alt="Behringer Mini Amp">
             </div>
             <div class="col-sm-2">
-                <p style="text-align:center">Yahmaha MW10 Mixer</p>
+                <p style="text-align:center">Yamaha MW10 Mixer</p>
                 <img id="myImg13" src="images/equipment/yamaha mw10.jpg"
-                     alt="Yahmaha MW10 Mixer">
+                     alt="Yamaha MW10 Mixer">
             </div>
         </div>
 
