--- a/studio.html
+++ b/studio.html
@@ -214,6 +214,12 @@
         <div class="column">
             <img src="images/studio/IMG_401550320342067.jpeg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
         </div>
+        <div class="column">
+            <img src="images/studio/IMG_401445813597679.jpeg" style="width:100%" onclick="openModal();currentSlide(17)" class="hover-shadow cursor">
+        </div>
+        <div class="column">
+            <img src="images/studio/IMG_401514370238306.jpeg" style="width:100%" onclick="openModal();currentSlide(18)" class="hover-shadow cursor">
+        </div>
     </div>
 
     <div id="myModal" class="modal">
@@ -221,82 +227,92 @@
         <div class="modal-content">
 
             <div class="mySlides">
-                <div class="numbertext">1 / 16</div>
+                <div class="numbertext">1 / 18</div>
                 <img src="images/studio/IMG_401415074034678.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">2 / 16</div>
+                <div class="numbertext">2 / 18</div>
                 <img src="images/studio/IMG_401428141448022.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">3 / 16</div>
+                <div class="numbertext">3 / 18</div>
                 <img src="images/studio/IMG_401435583281513.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">4 / 16</div>
+                <div class="numbertext">4 / 18</div>
                 <img src="images/studio/IMG_401454078886987.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">5 / 16</div>
+                <div class="numbertext">5 / 18</div>
                 <img src="images/studio/IMG_401462002196311.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">6 / 16</div>
+                <div class="numbertext">6 / 18</div>
                 <img src="images/studio/IMG_401469722929955.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">7 / 16</div>
+                <div class="numbertext">7 / 18</div>
                 <img src="images/studio/IMG_401477212004663.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">8 / 16</div>
+                <div class="numbertext">8 / 18</div>
                 <img src="images/studio/IMG_401484204955101.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">9 / 16</div>
+                <div class="numbertext">9 / 18</div>
                 <img src="images/studio/IMG_401491884581568.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">10 / 16</div>
+                <div class="numbertext">10 / 18</div>
                 <img src="images/studio/IMG_401500056151390.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">11 / 16</div>
+                <div class="numbertext">11 / 18</div>
                 <img src="images/studio/IMG_401508005248072.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">12 / 16</div>
+                <div class="numbertext">12 / 18</div>
                 <img src="images/studio/IMG_401521836241723.jpeg" style="width:100%">
             </div>
             <div class="mySlides">
-                <div class="numbertext">13 / 16</div>
+                <div class="numbertext">13 / 18</div>
                 <img src="images/studio/IMG_401529608122827.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">14 / 16</div>
+                <div class="numbertext">14 / 18</div>
                 <img src="images/studio/IMG_401535260466577.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">15 / 16</div>
+                <div class="numbertext">15 / 18</div>
                 <img src="images/studio/IMG_401543257170678.jpeg" style="width:100%">
             </div>
 
             <div class="mySlides">
-                <div class="numbertext">16 / 16</div>
+                <div class="numbertext">16 / 18</div>
                 <img src="images/studio/IMG_401550320342067.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">17 / 18</div>
+                <img src="images/studio/IMG_401445813597679.jpeg" style="width:100%">
+            </div>
+
+            <div class="mySlides">
+                <div class="numbertext">18 / 18</div>
+                <img src="images/studio/IMG_401514370238306.jpeg" style="width:100%">
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -354,6 +370,12 @@
             </div>
             <div class="column">
                 <img class="demo cursor" src="images/studio/IMG_401550320342067.jpeg" style="width:100%" onclick="currentSlide(16)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401445813597679.jpeg" style="width:100%" onclick="currentSlide(17)">
+            </div>
+            <div class="column">
+                <img class="demo cursor" src="images/studio/IMG_401514370238306.jpeg" style="width:100%" onclick="currentSlide(18)">
             </div>
         </div>
     </div>
