--- a/index.html
+++ b/index.html
@@ -15,77 +15,139 @@
     <div class="container mt-2">
         <div class="row">
             <div class="col-sm-8">
+
+
+                <!--Where it all started -->
+
                 <h2>Where it all started</h2>
                 <p class="year">2012</p>
-                <p>
-                    <img src="images/Studio_Close.JPG" class="img-thumbnail"
-                         alt="Cinque Terre" style="width:204px; height:136px;
+                <img src="images/Studio_Close.JPG" class="img-thumbnail"
+                     alt="Cinque Terre" style="width:204px; height:136px;
                             float:left; margin-right:15px;">
-                    <b>THERE WASN'T' MUCH YET!</b> However, it dawned on me that I had always wanted to get back into the music
-                    and the recording industry and the timing was perfect as I had fewer financial responsibilities.
-                    I finally got up enough nerve and money to purchase my first synthesizer workstation.
-                    I waited until I got a check from the government in the form of a tax return and headed out to Sam Ash
+                <p>
+                    <b>THERE WASN'T' MUCH YET!</b> However, it dawned on me
+                    that I had always wanted to get back into the music
+                    and the recording industry and the timing was perfect
+                    as I had fewer financial responsibilities.
+                    I finally got up enough nerve and money to purchase my
+                    first synthesizer workstation.
+                    I waited until I got a check from the government in the
+                    form of a tax return and headed out to Sam Ash
                     music store and bought a
-                    <a href="https://www.yamaha-keyboard-guide.com/yamaha-motif-es8.html" target="_blank">Yamaha Motif ES8</a>,
+                    <a href="https://www.yamaha-keyboard-guide.com/yamaha-motif-es8.html" target="_blank">
+                        Yamaha Motif ES8
+                    </a>,
                     a dynamic microphone, and a pair of
-                    <a href="http://www.samsontech.com/samson/products/studio-monitors/resolv/resolv50a/" target="_blank">Samson 50a</a>
+                    <a href="http://www.samsontech.com/samson/products/studio-monitors/resolv/resolv50a/" target="_blank">
+                        Samson 50a
+                    </a>
                     active monitors with subwoofer.
-                    Enough power and capabilities to start recording some pretty decent beats.
+                    Enough power and capabilities to start recording some
+                    pretty decent beats.
                 </p>
                 <p>
                     The following year I purchased a more powerful computer, a
-                    <a href="https://www.roland.com/us/products/vs-2000cd/" target="_blank">Roland VS2000</a> 16 track audio recorder,
-                    a couple of expansion cards and software, a flat screen monitor, and a
-                    <a href="https://www.roland.com/us/products/varios/" target="_blank">Roland VariOS</a> Open System Module
+                    <a href="https://www.roland.com/us/products/vs-2000cd/" target="_blank">
+                        Roland VS2000
+                    </a> 16 track audio recorder,
+                    a couple of expansion cards and software, a flat screen
+                    monitor, and a
+                    <a href="https://www.roland.com/us/products/varios/" target="_blank">
+                        Roland VariOS
+                    </a> Open System Module
                 </p>
                 <p>
-                    Since then, I've added more equipment but finally decided to invest in a software based digital
-                    audio workstation <a href="https://en.wikipedia.org/wiki/Digital_audio_workstation" target="_blank">(DAW)</a> 
+                    Since then, I've added more equipment but finally
+                    decided to invest in a software based digital
+                    audio workstation
+                    <a href="https://en.wikipedia.org/wiki/Digital_audio_workstation" target="_blank">
+                        (DAW)
+                    </a>
                     instead. I did a lot of research and comparison shopping and chose
-                    <a href="https://www.avid.com/pro-tools" target="_blank">Digidesign Pro Tools LE</a> (now Avid),
-                    <a href="https://www.reasonstudios.com/en/reason" target="_blank">Propellerhead Reason</a>, and
-                    <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>. I also selected
-                    <a href="https://www.native-instruments.com/en/" target="_blank">Native Instrument</a>
-                    Kore (no longer available), Kontakt, and Komplete as my main VSTIs because they comes
-                    with an abundance of soft instruments and samplers.
+                    <a href="https://www.avid.com/pro-tools" target="_blank">
+                        Digidesign Pro Tools LE
+                    </a> (now Avid),
+                    <a href="https://www.reasonstudios.com/en/reason" target="_blank">
+                        Propellerhead Reason
+                    </a>, and
+                    <a href="https://www.ableton.com/en/live/" target="_blank">
+                        Ableton Live
+                    </a>. I also selected
+                    <a href="https://www.native-instruments.com/en/" target="_blank">
+                        Native Instrument
+                    </a>
+                    Kore (no longer available), Kontakt, and Komplete as
+                    my main VSTIs because they comes with an abundance
+                    of soft instruments and samplers.
                 </p>
                 <p>
-                    Each year I would plan on a new purchase using my tax return as the primary source of the capital
+                    Each year I would plan on a new purchase using my tax
+                    return as the primary source of the capital
                     investment. So as the years passed, I purchased a
-                    <a href="https://mackie.com/en/products/controllers/mcu-pro-and-xt-pro" target="_blank">Mackie Universal Control</a>
-                    (MCU Pro) and 2 extenders (XT Pro), a couple more flat screens, 3 desks, condenser microphones, a pair of
-                    <a href="https://www.dynaudio.com/professional-audio/classic-bm-range/bm15a/" target="_blank">Dynaudio B15a</a>, 
+                    <a href="https://mackie.com/en/products/controllers/mcu-pro-and-xt-pro" target="_blank">
+                        Mackie Universal Control
+                    </a>
+                    (MCU Pro) and 2 extenders (XT Pro), a couple more flat
+                    screens, 3 desks, condenser microphones, a pair of
+                    <a href="https://www.dynaudio.com/professional-audio/classic-bm-range/bm15a/" target="_blank">
+                        Dynaudio B15a
+                    </a>,
                     and monitor stands.
                 </p>
                 <p>
-                    I finally decided it was time for room acoustic treatment. So I did a lot more
-                    research and comparison and selected <a href="https://www.gikacoustics.com/" target="_blank">GIK acoustic panels</a>.
+                    I finally decided it was time for room acoustic treatment.
+                    So I did a lot more research and comparison and selected
+                    <a href="https://www.gikacoustics.com/" target="_blank">
+                        GIK acoustic panels
+                    </a>.
                 </p>
                 <p>
-                    As a small up and coming company partnering with others, IKP is working to construct the best project
-                    studio we could. We are finally a couple of days from completing it. With all the latest software and
-                    some great hardware equipment, we hope to be a competitive force in the project studio recording business.
+                    As a small up and coming company partnering with others,
+                    IKP is working to construct the best project
+                    studio we could. We are finally a couple of days from
+                    completing it. With all the latest software and
+                    some great hardware equipment, we hope to be a competitive
+                    force in the project studio recording business.
+                </p>
+
+
+                <!--It's Complete -->
+
                 <h2>It's Complete</h2>
                 <p class="year">2016</p>
-                    <img src="images/Studio_Wide.JPG" class="img-thumbnail" alt="Cinque Terre"
-                         style="width:204px; height:136px;
+                <img src="images/Studio_Wide.JPG" class="img-thumbnail"
+                     alt="Cinque Terre"
+                     style="width:204px; height:136px;
                             float:left;margin-right:15px">
-                    <b>YEAH BABY!</b>   I finally put up the acoustic room treatment and what a difference. The sound is fantastic.
-                    I have never heard my music sound so good. The frequency response is flat at the low, mid and high
-                    end of the frequency spectrum. The true test will come when I bounce some tracks down to CD and play
-                    them in the trusty car. If they play well in the car and on my home hi-fi system, it will mean that
-                    the room's acoustics and monitor system are translating very well..
+                <p>
+                    <b>YEAH BABY!</b>   I finally put up the acoustic room
+                    treatment and what a difference. The sound is fantastic.
+                    I have never heard my music sound so good. The frequency
+                    response is flat at the low, mid and high end of the
+                    frequency spectrum. The true test will come when I bounce
+                    some tracks down to CD and play them in the trusty car.
+                    If they play well in the car and on my home hi-fi system,
+                    it will mean that the room's acoustics and monitor system
+                    are translating very well.
                 </p>
                 <p>
-                    I will soon start uploading some of my songs to the web. I have created a Soundclick, and Soundcloud account.
-                    These are some web site that stream audio from the web so that you don't have to download anything.
+                    I will soon start uploading some of my songs to the web.
+                    I have created a Soundclick, and Soundcloud account. These
+                    are some web site that stream audio from the web so that you
+                    don't have to download anything.
                 </p>
                 <p>
-                    My clients now have a space where they are comfortable tracking their material and know that the music
-                    they produce will sound as good on other systems as it does in my project studio. Now I can concentrate
-                    on making great beats and tracks rather than trying to process the sound based on misinformation that the
-                    room was creating before.
+                    My clients now have a space where they are comfortable
+                    tracking their material and know that the music they produce
+                    will sound as good on other systems as it does in my project
+                    studio. Now I can concentrate on making great beats and
+                    tracks rather than trying to process the sound based on
+                    misinformation that the room was creating before.
                 </p>
+
+
+                <!--About Me -->
+
             </div>
             <div class="col-sm-4">
                 <h2>About Me</h2>
@@ -94,30 +156,19 @@
                     <img src="images/Studio_Old.JPG"
                          alt="Forest" class="grow">
                 </a>
+
                 <span style="font-size:12px">(click to enlarge)</span>
+
                 <div class="fakeimg">At the very begining</div>
                 <p>Somerset, NJ, United States</p>
 
+
                 <!-- Song listing -->
+
                 <h3 class="mt-4">Songs</h3>
 
-                <p><b>G-Ride (feat. Christina R.)</b>
-                    <a href="lyrics/G-Ride.pdf" target="_blank">Lyrics</a>
-                </p>
-                <audio controls preload="none">
-                    <source src="music/G Ride2.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-
-                <p><b>My Fantasy Boy (feat. Janira R.)</b>
-                    <a href="lyrics/My Fantasy Boy.pdf" target="_blank">Lyrics</a>
-                </p>
-                <audio controls preload="none">
-                    <source src="music/Janira3.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-
-                <p><b>Wasting My Time (feat. Allen)</b>
+                <p>
+                    <b>Wasting My Time (feat. Allen)</b>
                     <a href="lyrics/Wasting My Time.pdf" target="_blank">Lyrics</a>
                 </p>
                 <audio controls preload="none">
@@ -125,7 +176,26 @@
                     Your browser does not support the audio element.
                 </audio>
 
-                <p><b>Soon (feat. Texas)</b>
+                <p>
+                    <b>G-Ride (feat. Christina R.)</b>
+                    <a href="lyrics/G-Ride.pdf" target="_blank">Lyrics</a>
+                </p>
+                <audio controls preload="none">
+                    <source src="music/G Ride2.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+
+                <p>
+                    <b>My Fantasy Boy (feat. Janira R.)</b>
+                    <a href="lyrics/My Fantasy Boy.pdf" target="_blank">Lyrics</a>
+                </p>
+                <audio controls preload="none">
+                    <source src="music/Janira3.wav" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+
+                <p>
+                    <b>Soon (feat. Texas)</b>
                     <a href="lyrics/Soon.pdf" target="_blank">Lyrics</a>
                 </p>
                 <audio controls preload="none">
@@ -169,7 +239,9 @@
                     Your browser does not support the audio element.
                 </audio>
 
-<!-- Video Tutorials -->
+
+                <!-- Video Tutorials -->
+
                 <h3 class="mt-4">Video Tutorials</h3>
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
