change email address text

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                     1234 Main Street <br>
                     Somerset, NJ 08641<br>
                     Home: 732.633.1560 <br>
-                    <strong>Email: </strong><a href="mailto:tlennon.ikp@gmail.com" target="_blank"> IvoryKey@gmail.com</a>
+                    <strong>Email: </strong><a href="mailto:tlennon.ikp@gmail.com" target="_blank"> IvoryKey@ikp.com</a>
                 </address>
 
             </div>
