--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
                 </p>
 
 
-                <!--About Me -->
+                <!--Old Pic of Me -->
 
             </div>
             <div class="col-sm-4">
-                <h2>About Me</h2>
+                <!--<h2>About Me</h2>-->
                 <!--<img src="images/Studio_Old.JPG" class="img-thumbnail" alt="Cinque Terre" width="100" height="100">-->
                 <a target="_blank" href="images/Studio_Old.JPG">
                     <img src="images/Studio_Old.JPG"
-                         alt="Forest" class="grow">
+                         alt="Forest" class="grow" style="margin-top:10px">
                 </a>
 
                 <span style="font-size:12px">(click to enlarge)</span>
