--- a/contact.html
+++ b/contact.html
@@ -44,34 +44,37 @@
             <div class="col-sm-4" id="logo1">
             </div>
         </div>
-        <span>
-            <em>
-                A professional recording engineer, musician, songwriter, and producer of electronic,
-                hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to
-                make your next demo or begin your next musical project.
-            </em>
-        </span>
-        <div class="col-sm-12">
+        <div>
+            <span>
+                <em>
+                    A professional recording engineer, musician, songwriter, and producer of electronic,
+                    hip hop, pop, R&B music. Unlimited tracks and every instrument on the planet. Contact us to
+                    make your next demo or begin your next musical project.
+                </em>
+            </span>
+        </div>
+        <div>
             <img src="images/testimonial_logo_clear.png"
                  alt="Cinque Terre" class="nohover">
+            <p class="reviewer">
+                <span class="reviewer">Julie B... </span>"I wanted to create a demo
+                to upload it one of those cloud composer services so my friends and family can hear me sing.
+                I had no idea what the music should sound like other than what was in my head. IKP recorded
+                my vocals on a track and when I returned, they produced a beat that matched perfectly.
+                They even overdubbed my vocals and created harmony backing tracks with my own voice.
+                They tuned everything so that I sounded perfect. It was AMAZING and
+                my friends say I should submit the track to a record company. WOW!..."
+            </p>
+            <p class="reviewer">
+                <span class="reviewer">Young Amazin'... </span>"I'm a rapper from Boogie Down Bronx
+                and heard about the project studio through a friend. I needed some beats that no one
+                has ever heard of like those free commercial beats they sell online that everyone
+                uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks.
+                I've been giging with my own music ever since and come back when I have new ideas to lay
+                down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED DONE!..."
+            </p>
         </div>
-        <p class="reviewer">
-            <span class="reviewer">Julie B... </span>"I wanted to create a demo
-            to upload it one of those cloud composer services so my friends and family can hear me sing.
-            I had no idea what the music should sound like other than what was in my head. IKP recorded
-            my vocals on a track and when I returned, they produced a beat that matched perfectly.
-            They even overdubbed my vocals and created harmony backing tracks with my own voice.
-            They tuned everything so that I sounded perfect. It was AMAZING and
-            my friends say I should submit the track to a record company. WOW!..."
-        </p>
-        <p class="reviewer">
-            <span class="reviewer">Young Amazin'... </span>"I'm a rapper from Boogie Down Bronx
-            and heard about the project studio through a friend. I needed some beats that no one
-            has ever heard of like those free commercial beats they sell online that everyone
-            uses in Fruty Loops. IKP customized my beats just for me and did the backing tracks.
-            I've been giging with my own music ever since and come back when I have new ideas to lay
-            down on tracks. EXCELLENT ENVIRONMENT TO GET WHAT I NEED DONE!..."
-        </p>
     </div>
+    <footer-component></footer-component>
 </body>
 </html>﻿
